# rekognition-demo

./: Readme.md  app.py  pyproject.toml
infrastructure/: main.py  utils.py
lambdas/rekognition/: face_detection.py  face_index.py  face_search.py
lambdas/thumbnail/: create.py
payload/: 1_happy_face.json  2_sunglass_face.json  3_multiple_faces.json  4_no_face.json
